Round 5: Pagination for SMS (5 endpoints) + Notification (5 endpoints) + Billing plans (2 endpoints)